; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/extr_debug.c_context2cpu.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/extr_debug.c_context2cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pdb_cpu = type { i8* }

@pdb_cpu_count = common dso_local global i32 0, align 4
@pdb_cpus = common dso_local global %struct.pdb_cpu* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.pdb_cpu* (i8*)* @context2cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.pdb_cpu* @context2cpu(i8* %0) #0 {
  %2 = alloca %struct.pdb_cpu*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %24, %1
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @pdb_cpu_count, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %27

9:                                                ; preds = %5
  %10 = load %struct.pdb_cpu*, %struct.pdb_cpu** @pdb_cpus, align 8
  %11 = load i32, i32* %4, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.pdb_cpu, %struct.pdb_cpu* %10, i64 %12
  %14 = getelementptr inbounds %struct.pdb_cpu, %struct.pdb_cpu* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  %16 = load i8*, i8** %3, align 8
  %17 = icmp eq i8* %15, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %9
  %19 = load %struct.pdb_cpu*, %struct.pdb_cpu** @pdb_cpus, align 8
  %20 = load i32, i32* %4, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.pdb_cpu, %struct.pdb_cpu* %19, i64 %21
  store %struct.pdb_cpu* %22, %struct.pdb_cpu** %2, align 8
  br label %28

23:                                               ; preds = %9
  br label %24

24:                                               ; preds = %23
  %25 = load i32, i32* %4, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %4, align 4
  br label %5

27:                                               ; preds = %5
  store %struct.pdb_cpu* null, %struct.pdb_cpu** %2, align 8
  br label %28

28:                                               ; preds = %27, %18
  %29 = load %struct.pdb_cpu*, %struct.pdb_cpu** %2, align 8
  ret %struct.pdb_cpu* %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
